buh :) - 16 August 2008
   [KVIrc Development Team]
   - Qt4 porting (wip)
   - Fixed tons of bugs
   - Cleaned up source code: many unused or deprecated functions have been removed,
     code optimizazions and many comments have been added
   - New build system: removed autotools in favour of CMake (thanks to all people
     who helped us reaching this point :)

   [Alexey]
   - Added support for animated avatars :)

   [CtrlAltCa]
   - KVS: added window.highlight command and $window.highlightLevel function
   - Avatar: added the ability to expose avatar in realname; others can understand
     if someone has an avatar set without the need of a ctcp;
   - Got Phonon working under win32
   - Added UPnP support

   [HelLViS69]
   - Finally updated this file :)
   - Improved About module
   - New StatusBar applet: Update Indicator
   - Improved StatusBar clock applet
   - New KVS command: added 'continue'
   - New KVS function: added $objects.name
   - New KVS module: with serverdb you can manipulate the server list DB
   - New KVS module: with proxydb you can manipulate the proxy list DB
   - Added style customization to the last read marker line, its own new icon will
     appear above to improve readablity :)

   [Voker57]
   - New audio support: Phonon (wip)

   [desowin]
   - New mediaplayer support: added Audacious Media Player and MPRIS backend




02 May 2007 - 12 March 2008
   [KVIrc Development Team]
   - A lot of changes documented in the svn log. See http://svn.kvirc.de/kvirc/ for the timeline.

02 May 2007
   [Alexey]
   - New KVS functions: $serialize and $unserialize to deal with JSON-serialized strings

16 Apr 2007
   [Noldor] (with the input from Pragma and Iakko)
   - Iakko's notifier is back. New in this version:
     1) QT4 compatible (on win and macos it is uses fast setWindowOpacity effect instead internal notifier blend())
	 2) Added Option to disable fadein/out effect useful on slow machine (need test)