@@ -1,3 +1,11 @@
+24 August 2008
+[CtrlAltCa]
+   - KVIrc executable and kvilib now qt3-aware
+   
+[Alexey]
+   - Added support for animated smiles :) (wip)
+ 
+
 buh :) - 16 August 2008
    [KVIrc Development Team]
    - Qt4 porting (wip)
